--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,82 @@
+html {
+  background-color: lightgreen;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+
 .App {
   margin: 1rem;
+  padding-top: 30px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  display: flex;
+}
+
+.page-title {
+  color: #ffffff;
+  width: 300px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.new-todo-wrapper {
+  width: 430px;
+  height: 40px;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.todo-input {
+  height: 100%;
+  width: 80%;
+  border: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 10px;
+  border-bottom-left-radius: 12px;
+  border-top-left-radius: 12px;
+  outline: none;
+}
+
+.add-todo-btn {
+  height: 100%;
+  width: 20%;
+  border: 0px;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+  background-color: #ffbb91;
+  outline: none;
+}
+
+.todo-list-wrapper {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  max-height: 70vh;
+  overflow-x: none;
+  overflow-y: scroll;
+}
+
+.todo-item-wrapper {
+  background-color: #ffffff;
+  width: 80%;
+  height: 40px;
+  padding-left: 30px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 12px;
+  line-height: 40px;
+}
+
+.title {
+  padding-left: 10px;
+  font-size: 24px;
 }
