--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,3 +80,10 @@ html {
   padding-left: 10px;
   font-size: 24px;
 }
+
+.delete-btn {
+  position: absolute;
+  right: 50px;
+  line-height: 40px;
+  font-size: 28px;
+}
